# fintech

./: .gitignore  .replit  README.md  pnpm-lock.yaml  pyproject.toml  replit.md
artifacts/costforge/: package.json  vite.config.ts
artifacts/costforge/.replit-artifact/: artifact.toml
artifacts/costforge/src/: App.tsx  index.css
artifacts/costforge/src/components/layout/: ProjectLayout.tsx
artifacts/costforge/src/lib/: api.ts  calculator.ts  mock-data.ts  queries.ts  store.tsx
artifacts/costforge/src/pages/: dashboard.tsx  registry.tsx
artifacts/costforge/src/pages/projects/: new.tsx
attached_assets/: Pasted-I-ll-analyze-your-project-flow-and-design-requirements-_1777453195837.txt
backend/: .gitignore  README.md  manage.py  requirements.txt
backend/api/: admin.py  auth.rest  calculator.py  fuzzy.py  llm.py  models.py  pricing_models.py  serializers.py  urls.py  views.py
backend/api/management/commands/: seed.py
backend/api/migrations/: 0001_initial.py  0002_alter_project_owner.py  0003_alter_pricingvariant_notes.py
backend/costforge/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: AppLayout.tsx
frontend/src/components/ui/: progress.tsx
frontend/src/lib/: api.ts  queries.ts
frontend/src/pages/: PricingModels.tsx  ServiceDetail.tsx  dashboard.tsx  registry.tsx
frontend/src/pages/projects/: new.tsx
frontend/src/pages/projects/[id]/: cost.tsx  services.tsx  usage.tsx
(+4 files in other folders)
