[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.34.0",
    "django==5.0.6",
    "django-cors-headers==4.3.1",
    "djangorestframework==3.15.1",
    "djangorestframework-simplejwt==5.3.1",
    "python-dotenv==1.0.1",
    "rapidfuzz==3.9.3",
]
